👷‍♂️ ci: dockerfile 수정